--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
                 <ul class="header-list list">
 
                     <li class="header-item"> <a class="ht" href="./index.html">Studio</a> </li>
-                    <li class="header-item current"> <a class="ht" href="./portfolio.html">Portfolio</a> </li>
+                    <li class="header-item current"> <a class="ht current" href="./portfolio.html">Portfolio</a> </li>
                     <li class="header-item"> <a class="ht" href="">Contacts</a> </li>
                 </ul>
             </nav>
@@ -198,49 +198,57 @@
         </section>
         
     </main>
-    <footer class="footer">
-        <div class="container">
+<footer class="footer">
+    <div class="container">
+        <div class="footer-wrap">
             <div class="footer-text">
-            <a class="footer-link web" href="./index.html">Web<span class="footer-studio">Studio</span> </a>
-            <h2 class="footer-paragraph">Increase the flow of customers and sales for your business with digital
-                marketing &
-                growth solutions.</h2>
+                <a class="footer-link web" href="./index.html">Web<span class="footer-studio">Studio</span> </a>
+                <h2 class="footer-paragraph">Increase the flow of customers and sales for your business with digital
+                    marketing &
+                    growth solutions.</h2>
             </div>
             <div class="footer-media">
-            <p class="soc-media">Social Media</p>
-            <ul class="media-soc-list list">
-                <li class="media-soc-item">
-                    <a href="" class="media-soc-link link">
-                        <svg class="media-soc-icon" width="24" height="24">
-                            <use href="./img/icons.svg#icon-instagram-2-1"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="media-soc-item">
-                    <a href="" class="media-soc-link link">
-                        <svg class="media-soc-icon" width="24" height="24">
-                            <use href="./img/icons.svg#icon-twitter-1-1"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="media-soc-item">
-                    <a href="" class="media-soc-link link">
-                        <svg class="media-soc-icon" width="24" height="24">
-                            <use href="./img/icons.svg#icon-facebook-1-1"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="media-soc-item">
-                    <a href="" class="media-soc-link link">
-                        <svg class="media-soc-icon" width="24" height="24">
-                            <use href="./img/icons.svg#icon-linkedin-1-1"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
+                <p class="soc-media">Social Media</p>
+                <ul class="media-soc-list list">
+                    <li class="media-soc-item">
+                        <a href="" class="media-soc-link link">
+                            <svg class="media-soc-icon" width="24" height="24">
+                                <use href="./img/icons.svg#icon-instagram-2-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="media-soc-item">
+                        <a href="" class="media-soc-link link">
+                            <svg class="media-soc-icon" width="24" height="24">
+                                <use href="./img/icons.svg#icon-twitter-1-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="media-soc-item">
+                        <a href="" class="media-soc-link link">
+                            <svg class="media-soc-icon" width="24" height="24">
+                                <use href="./img/icons.svg#icon-facebook-1-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="media-soc-item">
+                        <a href="" class="media-soc-link link">
+                            <svg class="media-soc-icon" width="24" height="24">
+                                <use href="./img/icons.svg#icon-linkedin-1-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <form class="subscribe-footer">
+                <label for="email" class="subscribe-text">Subscribe</label>
+                <div class="subscribe-wrap">
+                    <input id="email" class="subscribe-input" name="user-email" type="email" placeholder="Email" />
+                    <button class="subscribe-btn" type="submit">Subscribe</button>
+                </div>
+            </form>
         </div>
-        </div>
-    </footer>
+</footer>
 </body>
 
 </html>
