--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a class="header-link web" href="./index.html">Web<span class="studio">Studio</span></a>
                 <ul class="header-list list">
 
-                    <li class="header-item current"> <a class="ht" href="./index.html">Studio</a> </li>
+                    <li class="header-item current"> <a class="ht current" href="./index.html">Studio</a> </li>
                     <li class="header-item"> <a class="ht" href="./portfolio.html">Portfolio</a> </li>
                     <li class="header-item"> <a class="ht" href="">Contacts</a> </li>
                 </ul>
@@ -322,6 +322,7 @@
     </main>
         <footer class="footer">
             <div class="container">
+                <div class="footer-wrap">
                 <div class="footer-text">
                     <a class="footer-link web" href="./index.html">Web<span class="footer-studio">Studio</span> </a>
                     <h2 class="footer-paragraph">Increase the flow of customers and sales for your business with digital
@@ -361,6 +362,13 @@
                         </li>
                     </ul>
                 </div>
+                    <form class="subscribe-footer">
+                        <label for="email" class="subscribe-text">Subscribe</label>
+                        <div class="subscribe-wrap">
+                            <input id="email" class="subscribe-input" name="user-email" type="email" placeholder="Email" />
+                            <button class="subscribe-btn" type="submit">Subscribe</button>
+                        </div>
+                    </form>
             </div>
         </footer>
             <div class="backdrop is-hidden" data-modal>
@@ -421,6 +429,15 @@
                             <textarea name="" id="textarea" placeholder="Text input"class="comment"></textarea>
                             </div>
                             </li>
+                            <div class="privacy-wrap">
+                                <input class="privacy-input visually-hidden" id="privacy" name="privacy" type="checkbox" />
+                            <label for="privacy" class="privacy-text"><span class="privacy-icon">
+                                    <svg class="check-icon" width="10" height="8">
+                                        <use href="./img/icons.svg#icon-privacy"></use>
+                                    </svg>
+                                </span>
+                                I accept the terms and conditions of the&nbsp;
+                                <a class="privacy-link" href="">Privacy Policy</a></label>
                         <li class="modal-item">
                         <button type="submit" class="button">Send</button>
                         </li>
